Fixing some layout problems caused by Kanna

--- a/style.css
+++ b/style.css
@@ -110,6 +110,10 @@ a, .fa-bars {
 		top: 50px;
 		left: 160px;
 	}
+	
+	body .kasen-main {
+		height: 50vh;
+	}
 }
 
 @media only screen and (max-height: 350px) {
